--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 	<h1>My Contacts Detail...</h1>
-	<p>Mobile :- 8855223366 </p>
-	<p>Email :- abc@gmail.com</p>
-	<p>Address :- Delhi,India</p>
+	<p>Mobile :- 8950698827 </p>
+	<p>Email :- rishabhmangla4@gmail.com</p>
+	<p>Address :- YamunaNagar,Haryana,India</p>
 	<form action="mailto:rishabhmangla4@gmail.com" method="post" enctype="text/plain">
 		<label>Your Name:</label>
 		<input type="text" name="yourname"><br>
