--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<li><a href="https://www.cookingchanneltv.com">Cooking</a></li>
 	</ol>
 	<hr>
-	<h2>Work Experinse</h2>
+	<h2>Work Experience</h2>
 	<table cellspacing="20">
 		<tr>
 			<td>HTML</td>
